[workspace]
members = [
    ".",
    "examples/narwhal"
]

[package]
name = "narwhal"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.8"
libp2p = { version = "0.53", features = ["tcp", "tls", "kad", "identify", "request-response", "cbor", "tokio", "dns", "noise", "yamux", "macros"] }
serde = { version = "1.0.192", features = ["derive"] } 
tokio = { version = "1", features = ["full", "test-util"] }
env_logger = "0.10.1"
log = "0.4.20"
axum = { version = "0.7", features = ["macros"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.53", features = ["full"] }