[package]
name = "narwhal-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "narwhal-example"
path = "src/main.rs"

[dependencies]
narwhal = { path = "../.." }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
libp2p = "0.52"
clap = { version = "4.4", features = ["derive"] }
sha2 = "0.10"
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }